# ocp-rag-chatbot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BEACHHEAD_ICP_AND_TRIGGER.md  CANONICAL_AST_DESIGN.md  CODEX_OPERATING_CHARTER.md  CODE_READING_GUIDE.md  CURRENT_PHASE.md  CUSTOMER_POC_BUYER_PACKET.md  Dockerfile  Dockerfile.backend  ENTRYPOINTS.md  EVALS.md  EXECUTION_HARNESS_CONTRACT.md  FILE_ROLE_GUIDE.md  FORMAT_SUPPORT_MATRIX.md  HARNESS_ENGINEERING_CONTRACT.md  MULTIVERSION_CRAWLER_DESIGN.md  Makefile  OWNER_SCENARIO_SCORECARD.yaml  OWNER_VALUE_CASE.md  P0_ARCHITECTURE_FREEZE_ADDENDUM.md  PACK_BOUNDARY_AUDIT.md  PARSED_ARTIFACT_CONTRACT.md  PARSER_ROUTING_POLICY.md  PART1_PLAN.md  PART2_PLAN.md  PART3_PLAN.md  PART4_PLAN.md  PIPELINE_PLAIN_GUIDE.md  PRD.md  PRODUCTIZATION_TODO.md  PRODUCT_BRIEF.md  PRODUCT_GATE_SCORECARD.yaml  PRODUCT_ROADMAP.md  PROJECT.md  PROJECT_PLAN.md  Q1_8_PRODUCT_CONTRACT.md  QUICKSTART.md  (+26 more)
.claude/: launch.json
.plan/: README.md  part-1-current-state-and-gap-analysis.md  part-2-console-ux-plan.md  part-3-echo-multiturn-plan.md  part-4-sieve-retrieval-and-ingest-plan.md  part-5-runbook-answer-quality-plan.md  part-6-redpen-eval-and-release-plan.md  part-7-roadmap-and-ownership.md
app/: AGENTS.md  README.md  direct_rag_runtime.py  multiturn_memory.py  ocp_policy.py  ocp_runtime_gateway.py  opendocuments_openai_bridge.py  runtime_cache.py  runtime_config.py  runtime_gateway_support.py  runtime_source_index.py  vector_index.py
archive/: INDEX.md
configs/: active-source-profile.yaml  chunk-schema.yaml  metadata-schema.example.yaml  metadata-schema.yaml  rag-policy.example.yaml  rag-policy.yaml  source-manifest.example.yaml  source-manifest.yaml  source-profiles.yaml
data/: README.md  eval_report.json  eval_report.md  eval_report_stream.json  eval_report_stream.md  eval_results.json
deployment/: AGENTS.md  README.md  activate_index.py  activation-smoke-case-ids.json  airgap-flow.md  approval-record-schema.yaml  approve_bundle.py  build_outbound_bundle.py  bundle-layout-contract.md  (+36 more)
docs/: 발표대본.md  (+30 more)
(+2189 files in other folders)
