[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocp-rag-v2"
version = "0.1.0"
description = "Closed-network Korean OCP RAG preprocessing pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "datasets>=4.8.0",
  "langchain-openai>=1.1.0",
  "openai>=2.30.0",
  "pandas>=2.2.0",
  "ragas==0.4.3",
  "requests>=2.31",
  "sentence-transformers==5.3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
