[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocp-rag-v2"
version = "0.1.0"
description = "Closed-network Korean OCP RAG preprocessing pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "requests>=2.31",
  "sentence-transformers==5.3.0",
]

[project.optional-dependencies]
eval = [
  "ragas>=0.4.3",
  "datasets>=4.8.4",
  "openai>=1.0.0",
  "langchain-openai>=0.3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
